Fixed <hr> element not showing on drop down menus. fixed right on mobile devices and box sizes of the statement block on mobile devices the page is now fully responsive

--- a/stylesheets/sass/components/_heroRMstatment.scss
+++ b/stylesheets/sass/components/_heroRMstatment.scss
@@ -9,6 +9,9 @@
 #heroStatement{
   height: 65%;
   width: 100%;
+  @media (max-width: 1000px){
+    height: 30%;
+  }
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,15 +19,14 @@
   //Hero Content Wrapper
   #heroStatementContent{
     height: 100%;
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-size: 3em;
-    @media (max-width: 1200px){
+    @media (max-width: 1000px){
       font-size: 2em;
-      min-width: 1200px;
     }
     font-weight: 300;
     line-height: 1.4em;
